--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
 		android:theme="@style/Theme.ShoppingList"
 		tools:targetApi="31">
 		<activity
+			android:name=".Presentation.ShopItemActivity"
+			android:exported="false"
+			android:windowSoftInputMode="adjustResize">
+			<meta-data
+				android:name="android.app.lib_name"
+				android:value="" />
+		</activity>
+		<activity
 			android:name=".Presentation.MainActivity"
 			android:exported="true">
 			<intent-filter>
